[package]
name = "ms5611-spi"
version = "0.2.0"
authors = ["Alexandre Burry"]
description = "no_std driver for MS5611 and MS5607 barometer sensors"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = ["pressure", "sensor", "spi", "no-std", "hal"]
repository = "https://github.com/Arkaleks/ms5611"

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
embedded-hal-mock = "0.5"
linux-embedded-hal = "0.2.2"

[features]
default = ["ms5611"]
ms5611 = []
ms5607 = []
